@@ -1,3 +1,7 @@
+2012-02-21  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added stdWrap for facet names and sorting option labels
+
 2012-02-20  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Changed the shebang line of the install script to use the environment instead of assuming a specific location for bash
